# MAS-Consensus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  analysis.md  baseline.py  change.md  experiment.md  experiment.psv  experiment_guide.md  final_test.txt  issue.md  logging.ini  main.py  part1.psv  part2.psv  part3.psv  plan.md  plan_cn.md  pyproject.toml  requirements.txt  run.md  run_experiments.sh
.githooks/: pre-commit
src/baseline/: agents.py  llm.py  main.py  tasks.py  text_processing.py
src/dataset/: adv.jsonl  fact.jsonl  gsm8k.jsonl
src/mas_consensus/: README.md  agent_base.py  agents.py  calculate_sim.py  chain.py  config.py  cut_figure.py  defense.py  draw.py  evaluate.py  evaluate_all.py  experiment_config.py  generate_dataset.py  llm.py  logging_config.py  main.py  methods.py  moderation.py  prompts.py  run.py  run_adv.py  run_bias.py  run_chain_analysis.py  run_csqa.py  run_defense_comparison.py  run_efficiency_analysis.py  run_experiment.py  run_fact.py  run_gsm8k.py  run_malicious_behavior_analysis.py  tasks.py  text_processing.py  util.py
src/mas_consensus/dataset/: bias.jsonl  csqa.jsonl
src/mas_consensus/evaluation/: adv.py  base.py  bias.py  csqa.py  fact.py  gsm8k.py
tests/: test_agents.py  test_chain.py  test_chain_analysis.py  test_config.py  test_defense.py  test_defense_comparison.py  test_efficiency_analysis.py  test_llm.py  test_main.py  test_malicious_behavior_analysis.py  test_run_experiment.py  test_tasks.py  test_text_processing.py
