[project]
name = "Agent-Consensus"
version = "0.1.0"
description = "Agent consensus paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "networkx[default]>=3.4.2",
    "numpy==1.26.4",
    "openai>=2.3.0",
    "pillow>=11.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
]
